--- a/2025年终报告index.html
+++ b/2025年终报告index.html
@@ -178,7 +178,15 @@ canvas {
     <div class="text">
       2025年即将过去<br>
       感谢您2025年对陈老师的陪伴<br>
-      新的一年，希望您多多牵着陈老师的手<br>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="share">
+    <div class="text">
+      新的一年<br>
+      希望您多多牵着陈老师的手<br>
       多和陈老师一起玩<br>
       一起走过春华秋实<br>
       一起去看山川湖泊
@@ -275,3 +283,4 @@ gsap.to(".heartbeat", {
 
 </body>
 </html>
+
